--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">NO-todo</string>
-    <string name="login">LOGIN</string>
+    <string name="login">登录</string>
+    <string name="register">注册</string>
 </resources>
